--- a/main.bib
+++ b/main.bib
@@ -99,7 +99,7 @@ year = "2008",
 note = "",
 issn = "0021-9614",
 doi = "http://dx.doi.org/10.1016/j.jct.2008.07.023",
-url = "http://www.sciencedirect.com/science/article/pii/S0021961408001778",
+url = "http://www.sciencedirect.com/sci12/article/pii/S0021961408001778",
 author = "A.G.M. Ferreira and L.Q. Lobo",
 keywords = "Rare gases: Ar, Kr, Xe, (Ne, Rn)",
 keywords = "Sublimation",
